Started on Poker and updated UI for startpage

--- a/MauiApp2.csproj
+++ b/MauiApp2.csproj
@@ -67,6 +67,9 @@
 	  <MauiXaml Update="BlackJackPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="PokerPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
